CHANGED SDK TO 33

--- a/app/src/main/res/layout/view_seek_bar.xml
+++ b/app/src/main/res/layout/view_seek_bar.xml
@@ -16,8 +16,8 @@
             android:paddingStart="@dimen/spacing_small"
             android:paddingEnd="@dimen/spacing_small"
             app:labelBehavior="gone"
-            android:valueFrom="0"
-            android:valueTo="1"
+            android:valueFrom="0f"
+            android:valueTo="2f"
             app:thumbRadius="@dimen/slider_thumb_radius"
             app:haloRadius="@dimen/slider_halo_radius"
             app:layout_constraintBottom_toBottomOf="parent"
